--- a/Ex1/src/main/res/values/themes.xml
+++ b/Ex1/src/main/res/values/themes.xml
@@ -1,9 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Ex1" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Required for FAB and other Material components -->
         <item name="colorPrimary">@android:color/holo_blue_light</item>
         <item name="colorPrimaryDark">@android:color/holo_blue_dark</item>
         <item name="colorAccent">@android:color/holo_green_light</item>
         <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
+    </style>
+    <!-- Base application theme. -->
+    <style name="Base.Ex1" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 </resources>
